[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/sounds/computer_startup.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/sprites/objects/computer_screen_anim2.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/objects/computer_screen_anim.png" type="Texture" id=3]
[ext_resource path="res://assets/dogicabold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/computer_ui.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/main_menu_btns3.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/mian_menu_btns1.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/mian_menu_btns2.png" type="Texture" id=8]
[ext_resource path="res://assets/dogicapixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scenes/computer/Profile.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/computer/Options.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sounds/Good-Morning.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/Fast-Mouse_Click.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/select_beep.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/Old-Car-Horn.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/ui/computer_left.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/panel_center.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/computer_top.png" type="Texture" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "popup",
"speed": 8.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "still",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]
resource_name = "screen_exit"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "still", "popup" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9, 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "screen_popup"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "popup", "still" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="DynamicFont" id=14]
size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 2
extra_spacing_space = 3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 8
font_data = ExtResource( 9 )

[node name="computer_ui" type="Node2D"]
position = Vector2( -8, 0 )
script = ExtResource( 5 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 328.375, 192 )
frames = SubResource( 12 )
animation = "still"

[node name="animation" type="AnimationPlayer" parent="."]
anims/screen_exit = SubResource( 17 )
anims/screen_popup = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -12.0

[node name="computer_ui" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 208.0
margin_top = 72.0
margin_right = 448.0
margin_bottom = 312.0
focus_mode = 2
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="computer_ui"]
margin_right = 240.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
texture = ExtResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="computer_ui"]
margin_left = 8.0
margin_right = 232.0
margin_bottom = 16.0
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/MarginContainer"]
margin_top = 5.0
margin_right = 224.0
margin_bottom = 11.0
mouse_filter = 0
mouse_default_cursor_shape = 6
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WHACK OS"

[node name="date_time" type="Label" parent="computer_ui/MarginContainer"]
margin_top = 5.0
margin_right = 224.0
margin_bottom = 11.0
mouse_filter = 0
mouse_default_cursor_shape = 6
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WHACK OS"
align = 2

[node name="ColorRect2" type="TextureRect" parent="computer_ui"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 240.0
mouse_default_cursor_shape = 6
texture = ExtResource( 16 )

[node name="main_menu" type="MarginContainer" parent="computer_ui"]
margin_left = 8.0
margin_top = 31.0
margin_right = 79.0
margin_bottom = 233.0
focus_mode = 2
mouse_default_cursor_shape = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="computer_ui/main_menu"]
margin_right = 71.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Profile" type="TextureButton" parent="computer_ui/main_menu/VBoxContainer"]
margin_right = 71.0
margin_bottom = 37.0
mouse_filter = 1
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/main_menu/VBoxContainer/Profile"]
margin_left = 3.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Profile"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="computer_ui/main_menu/VBoxContainer"]
margin_top = 41.0
margin_right = 71.0
margin_bottom = 78.0
mouse_filter = 1
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/main_menu/VBoxContainer/NewGame"]
margin_left = 3.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="TextureButton" parent="computer_ui/main_menu/VBoxContainer"]
margin_top = 82.0
margin_right = 71.0
margin_bottom = 119.0
mouse_filter = 1
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/main_menu/VBoxContainer/LoadGame"]
margin_left = 3.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Load Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="computer_ui/main_menu/VBoxContainer"]
margin_top = 123.0
margin_right = 71.0
margin_bottom = 160.0
mouse_filter = 1
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/main_menu/VBoxContainer/Options"]
margin_left = 3.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="computer_ui/main_menu/VBoxContainer"]
margin_top = 164.0
margin_right = 71.0
margin_bottom = 202.0
mouse_filter = 1
mouse_default_cursor_shape = 6
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="computer_ui/main_menu/VBoxContainer/Exit"]
margin_left = 3.0
margin_top = 3.0
margin_right = 71.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="TextureRect" parent="computer_ui"]
margin_left = 93.3784
margin_top = 68.0
margin_right = 237.378
margin_bottom = 180.0
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 305, 143 )

[node name="Clear" type="Position2D" parent="."]
position = Vector2( -192, 240 )

[node name="Profile" parent="." instance=ExtResource( 10 )]
margin_left = -192.0
margin_top = 83.0
margin_right = -55.0
margin_bottom = 189.0

[node name="Options" parent="." instance=ExtResource( 11 )]
margin_left = 43.989
margin_top = 448.163
margin_right = 83.989
margin_bottom = 488.163

[node name="good_morning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -6.0

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -6.0

[node name="car_horn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -9.0
